[gd_scene load_steps=9 format=3 uid="uid://b8h3ongrp0llt"]

[ext_resource type="FontFile" uid="uid://c7le2efbjcl6u" path="res://assets/fonts/PixelOperator8.ttf" id="1_8vuxs"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_ub8ld"]
[ext_resource type="Texture2D" uid="uid://dcnwnglqjlt66" path="res://assets/sprites/croquette.png" id="2_o7uxa"]
[ext_resource type="PackedScene" uid="uid://dt8fjvp2gdfnf" path="res://scenes/health.tscn" id="3_kmyjk"]
[ext_resource type="Texture2D" uid="uid://c1xy35pjys0ck" path="res://assets/sprites/slime_purple.png" id="5_y5r6i"]

[sub_resource type="Animation" id="Animation_y7hx5"]
resource_name = "pulse"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 248), Vector2(0, 176)]
}

[sub_resource type="Animation" id="Animation_mnk3e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 316)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2v4k"]
_data = {
"RESET": SubResource("Animation_mnk3e"),
"pulse": SubResource("Animation_y7hx5")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ub8ld")

[node name="LevelCount" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.784314)
clip_contents = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.5
offset_top = 40.0
offset_right = 97.5
offset_bottom = 91.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_8vuxs")
theme_override_font_sizes/font_size = 16
text = "Garden 1
Spring Day"
horizontal_alignment = 1

[node name="Node2D" type="Node2D" parent="."]

[node name="Slimes" type="CanvasGroup" parent="."]
position = Vector2(64, 0)

[node name="SlimesCount" type="Label" parent="Slimes"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.784314)
clip_contents = true
offset_left = 809.0
offset_top = 50.0
offset_right = 865.0
offset_bottom = 82.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_8vuxs")
theme_override_font_sizes/font_size = 32
text = "99"

[node name="SlimeSprite" type="Sprite2D" parent="Slimes"]
position = Vector2(773, 66)
scale = Vector2(3, 3)
texture = ExtResource("5_y5r6i")
region_enabled = true
region_rect = Rect2(77, 12, 14, 12)

[node name="Coins" type="CanvasGroup" parent="."]
position = Vector2(64, 0)

[node name="CoinsCount" type="Label" parent="Coins"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.784314)
clip_contents = true
offset_left = 970.0
offset_top = 50.0
offset_right = 1026.0
offset_bottom = 82.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_8vuxs")
theme_override_font_sizes/font_size = 32
text = "99"

[node name="CoinSprite" type="Sprite2D" parent="Coins"]
position = Vector2(935, 64)
scale = Vector2(4, 4)
texture = ExtResource("2_o7uxa")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Health" parent="." instance=ExtResource("3_kmyjk")]
position = Vector2(64, 64)

[node name="Score" type="CanvasGroup" parent="."]
position = Vector2(64, 576)

[node name="ScoreLabel" type="Label" parent="Score"]
modulate = Color(1, 1, 1, 0.784314)
offset_right = 40.0
offset_bottom = 16.0
text = "Score"

[node name="ScoreValue" type="Label" parent="Score"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.784314)
offset_left = 80.0
offset_right = 122.0
offset_bottom = 16.0
pivot_offset = Vector2(0, 8)
text = "000"
metadata/_edit_use_anchors_ = true

[node name="ScoreDisplay" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "+ 1000"
horizontal_alignment = 1

[node name="ScoreAnimation" type="AnimationPlayer" parent="ScoreDisplay"]
libraries = {
"": SubResource("AnimationLibrary_g2v4k")
}
